[B]3.31[/B]
[added] Option to include year in search query

[B]3.30[/B]
[added] Get country of origin 

[B]3.29[/B]
[fix] Fixed getting GENRE details

[B]3.28[/B]
[fix] Get poster fallback to lo-res picture

[B]3.27[/B]
[fix] Get movie using URL from .NFO file
[fix] Cleanup

[B]3.26[/B]
[added] Option to remove unsafe chars from reviews
[added] Extend search in Shows and Series
[fix] CSFD search update

[B]3.25[/B]
[fix] Remove unsafe chars from CSFD reviews
[added] Option to use English title in case of non-latin chars are in secondary

[B]3.24[/B]
[fix] Getting credits data

[B]3.23[/B]
[added] Fixes which should be added in previous version

[B]3.22[/B]
[fix] Doubled credits 
[fix] Retrieving more fanarts from CSFD
[changed] Formatting of user reviews from CSFD

[B]3.21[/B]
[added] Option: Attach reviews from CSFD to plot
[changed] Alternative search mode is enabled by default

[B]3.20b[/B]
[fix] CSFD search when using English filenames
[added] Option: Advanced search when filnames are in Czech language

[B]3.20a[/B]
[added] Do not use Working title as a Secondary Title
[fix] CSFD search more improved

[B]3.20[/B]
[added] Download pictures as FanArt from CSFD
[fix] CSFD search improved

[B]3.19[/B]
[fix] CSFD movie posters fetching

[B]3.18[/B]
[added] Use review as fallback when plot is missing.
[fix] CSFD rating

[B]3.17[/B]
[added] Fetching thumbs of actors from CSFD website.

[B]3.16[/B]
[changed] new code to work with latest CSFD website. No IMDB/TMDB support.

[B]3.15[/B]
[fix] more graceful behavior when missing imdbId (MrVoltz)
[fix] proper dependencies

[B]3.14[/B]
[fix] imdb akas subdomain not reachable
[fix] different behavior on cleanbuffers - infinite loop crashing Kodi
[removed] downloading US rating from imdb took +1s for each request.

[B]3.13[/B]
[fix] rolled back to http for imdb

[B]3.12[/B]
[fix] https with user-agent for csfd.cz calls (JimmyS83)

[B]3.11[/B]
[added] Slovak translation (mvalec)

[B]3.10[/B]
[fix] get imdbid from https links
